<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="?attr/colorNeutral"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"/>


    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="welcome">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/welcome_title"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_message"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_card"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Selector"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/login_selector"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="1sp"
                    android:backgroundTint="@android:color/transparent"
                    app:tabGravity="fill"
                    app:tabIndicator="@drawable/login_selector"
                    app:tabIndicatorColor="?attr/colorPrimaryVariant"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="35dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@null"
                    app:tabSelectedTextColor="?attr/colorSurface"
                    app:tabTextColor="?android:attr/textColorHint">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="Log in" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="SignUp" />
                </com.google.android.material.tabs.TabLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/usernameLayout"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                android:layout_marginBottom="12dp"
                android:visibility="gone">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/shield_person"
                        app:tint="?attr/colorSecondary" />


                    <EditText
                        android:id="@+id/username"
                        style="?attr/textAppearanceBodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/usernameHint"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:isCredential="true"
                        android:textColor="?attr/colorNeutral" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/alternate_email"
                        app:tint="?attr/colorSecondary" />

                    <EditText
                        android:id="@+id/email"
                        style="?attr/textAppearanceBodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/emailHint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:isCredential="true"
                        android:textColor="?attr/colorNeutral" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/rounded_lock"
                        app:tint="?attr/colorSecondary" />


                    <EditText
                        android:id="@+id/password"
                        style="?attr/textAppearanceBodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:hint="@string/passwordHint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:isCredential="true"
                        android:singleLine="true"
                        android:textColor="?attr/colorNeutral"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/passVisible"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="4dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/visibile"
                        android:tag="1"
                        app:tint="?attr/colorSecondary" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="3dp"
                android:layout_marginRight="24dp"
                android:focusable="true"
                android:text="Forgot password?"
                android:textColor="?attr/colorNeutral"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:padding="3dp"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            style="@style/elevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/login_button_background"
            android:text="Log in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                app:dividerInsetEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="OR"
                android:textColor="?attr/colorNeutral"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/googleBtn"
            style="@style/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in with Google" />

        <Button
            android:id="@+id/twitterBtn"
            style="@style/twitterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in with Twitter" />
    </LinearLayout>


</LinearLayout>